qt6/gen_qimage.nim


proc fcQImage_new(): ptr cQImage {.importc: "QImage_new".}
proc fcQImage_new2(size: pointer, format: cint): ptr cQImage {.importc: "QImage_new2".}
proc fcQImage_new3(width: cint, height: cint, format: cint): ptr cQImage {.importc: "QImage_new3".}
proc fcQImage_new4(data: ptr uint8, width: cint, height: cint, format: cint): ptr cQImage {.importc: "QImage_new4".}
proc fcQImage_new5(data: ptr uint8, width: cint, height: cint, format: cint): ptr cQImage {.importc: "QImage_new5".}
proc fcQImage_new6(data: ptr uint8, width: cint, height: cint, bytesPerLine: int64, format: cint): ptr cQImage {.importc: "QImage_new6".}
proc fcQImage_new7(data: ptr uint8, width: cint, height: cint, bytesPerLine: int64, format: cint): ptr cQImage {.importc: "QImage_new7".}
proc fcQImage_new8(fileName: struct_miqt_string): ptr cQImage {.importc: "QImage_new8".}
proc fcQImage_new9(param1: pointer): ptr cQImage {.importc: "QImage_new9".}
proc fcQImage_new10(fileName: struct_miqt_string, format: cstring): ptr cQImage {.importc: "QImage_new10".}
proc fcQImage_operatorAssign(self: pointer, param1: pointer): void {.importc: "QImage_operatorAssign".}
proc fcQImage_swap(self: pointer, other: pointer): void {.importc: "QImage_swap".}
proc fcQImage_isNull(self: pointer, ): bool {.importc: "QImage_isNull".}
proc fcQImage_devType(self: pointer, ): cint {.importc: "QImage_devType".}
proc fcQImage_operatorEqual(self: pointer, param1: pointer): bool {.importc: "QImage_operatorEqual".}
proc fcQImage_operatorNotEqual(self: pointer, param1: pointer): bool {.importc: "QImage_operatorNotEqual".}
proc fcQImage_ToQVariant(self: pointer, ): pointer {.importc: "QImage_ToQVariant".}
proc fcQImage_detach(self: pointer, ): void {.importc: "QImage_detach".}
proc fcQImage_isDetached(self: pointer, ): bool {.importc: "QImage_isDetached".}
proc fcQImage_copy(self: pointer, ): pointer {.importc: "QImage_copy".}
proc fcQImage_copy2(self: pointer, x: cint, y: cint, w: cint, h: cint): pointer {.importc: "QImage_copy2".}
proc fcQImage_format(self: pointer, ): cint {.importc: "QImage_format".}
proc fcQImage_convertToFormat(self: pointer, f: cint): pointer {.importc: "QImage_convertToFormat".}
proc fcQImage_convertToFormat2(self: pointer, f: cint, colorTable: struct_miqt_array): pointer {.importc: "QImage_convertToFormat2".}
proc fcQImage_reinterpretAsFormat(self: pointer, f: cint): bool {.importc: "QImage_reinterpretAsFormat".}
proc fcQImage_convertedTo(self: pointer, f: cint): pointer {.importc: "QImage_convertedTo".}
proc fcQImage_convertTo(self: pointer, f: cint): void {.importc: "QImage_convertTo".}
proc fcQImage_width(self: pointer, ): cint {.importc: "QImage_width".}
proc fcQImage_height(self: pointer, ): cint {.importc: "QImage_height".}
proc fcQImage_size(self: pointer, ): pointer {.importc: "QImage_size".}
proc fcQImage_rect(self: pointer, ): pointer {.importc: "QImage_rect".}
proc fcQImage_depth(self: pointer, ): cint {.importc: "QImage_depth".}
proc fcQImage_colorCount(self: pointer, ): cint {.importc: "QImage_colorCount".}
proc fcQImage_bitPlaneCount(self: pointer, ): cint {.importc: "QImage_bitPlaneCount".}
proc fcQImage_color(self: pointer, i: cint): cuint {.importc: "QImage_color".}
proc fcQImage_setColor(self: pointer, i: cint, c: cuint): void {.importc: "QImage_setColor".}
proc fcQImage_setColorCount(self: pointer, colorCount: cint): void {.importc: "QImage_setColorCount".}
proc fcQImage_allGray(self: pointer, ): bool {.importc: "QImage_allGray".}
proc fcQImage_isGrayscale(self: pointer, ): bool {.importc: "QImage_isGrayscale".}
proc fcQImage_bits(self: pointer, ): ptr uint8 {.importc: "QImage_bits".}
proc fcQImage_bits2(self: pointer, ): ptr uint8 {.importc: "QImage_bits2".}
proc fcQImage_constBits(self: pointer, ): ptr uint8 {.importc: "QImage_constBits".}
proc fcQImage_sizeInBytes(self: pointer, ): int64 {.importc: "QImage_sizeInBytes".}
proc fcQImage_scanLine(self: pointer, param1: cint): ptr uint8 {.importc: "QImage_scanLine".}
proc fcQImage_scanLineWithInt(self: pointer, param1: cint): ptr uint8 {.importc: "QImage_scanLineWithInt".}
proc fcQImage_constScanLine(self: pointer, param1: cint): ptr uint8 {.importc: "QImage_constScanLine".}
proc fcQImage_bytesPerLine(self: pointer, ): int64 {.importc: "QImage_bytesPerLine".}
proc fcQImage_valid(self: pointer, x: cint, y: cint): bool {.importc: "QImage_valid".}
proc fcQImage_validWithPt(self: pointer, pt: pointer): bool {.importc: "QImage_validWithPt".}
proc fcQImage_pixelIndex(self: pointer, x: cint, y: cint): cint {.importc: "QImage_pixelIndex".}
proc fcQImage_pixelIndexWithPt(self: pointer, pt: pointer): cint {.importc: "QImage_pixelIndexWithPt".}
proc fcQImage_pixel(self: pointer, x: cint, y: cint): cuint {.importc: "QImage_pixel".}
proc fcQImage_pixelWithPt(self: pointer, pt: pointer): cuint {.importc: "QImage_pixelWithPt".}
proc fcQImage_setPixel(self: pointer, x: cint, y: cint, index_or_rgb: cuint): void {.importc: "QImage_setPixel".}
proc fcQImage_setPixel2(self: pointer, pt: pointer, index_or_rgb: cuint): void {.importc: "QImage_setPixel2".}
proc fcQImage_pixelColor(self: pointer, x: cint, y: cint): pointer {.importc: "QImage_pixelColor".}
proc fcQImage_pixelColorWithPt(self: pointer, pt: pointer): pointer {.importc: "QImage_pixelColorWithPt".}
proc fcQImage_setPixelColor(self: pointer, x: cint, y: cint, c: pointer): void {.importc: "QImage_setPixelColor".}
proc fcQImage_setPixelColor2(self: pointer, pt: pointer, c: pointer): void {.importc: "QImage_setPixelColor2".}
proc fcQImage_colorTable(self: pointer, ): struct_miqt_array {.importc: "QImage_colorTable".}
proc fcQImage_setColorTable(self: pointer, colors: struct_miqt_array): void {.importc: "QImage_setColorTable".}
proc fcQImage_devicePixelRatio(self: pointer, ): float64 {.importc: "QImage_devicePixelRatio".}
proc fcQImage_setDevicePixelRatio(self: pointer, scaleFactor: float64): void {.importc: "QImage_setDevicePixelRatio".}
proc fcQImage_deviceIndependentSize(self: pointer, ): pointer {.importc: "QImage_deviceIndependentSize".}
proc fcQImage_fill(self: pointer, pixel: cuint): void {.importc: "QImage_fill".}
proc fcQImage_fillWithColor(self: pointer, color: pointer): void {.importc: "QImage_fillWithColor".}
proc fcQImage_fill2(self: pointer, color: cint): void {.importc: "QImage_fill2".}
proc fcQImage_hasAlphaChannel(self: pointer, ): bool {.importc: "QImage_hasAlphaChannel".}
proc fcQImage_setAlphaChannel(self: pointer, alphaChannel: pointer): void {.importc: "QImage_setAlphaChannel".}
proc fcQImage_createAlphaMask(self: pointer, ): pointer {.importc: "QImage_createAlphaMask".}
proc fcQImage_createHeuristicMask(self: pointer, ): pointer {.importc: "QImage_createHeuristicMask".}
proc fcQImage_createMaskFromColor(self: pointer, color: cuint): pointer {.importc: "QImage_createMaskFromColor".}
proc fcQImage_scaled(self: pointer, w: cint, h: cint): pointer {.importc: "QImage_scaled".}
proc fcQImage_scaledWithQSize(self: pointer, s: pointer): pointer {.importc: "QImage_scaledWithQSize".}
proc fcQImage_scaledToWidth(self: pointer, w: cint): pointer {.importc: "QImage_scaledToWidth".}
proc fcQImage_scaledToHeight(self: pointer, h: cint): pointer {.importc: "QImage_scaledToHeight".}
proc fcQImage_transformed(self: pointer, matrix: pointer): pointer {.importc: "QImage_transformed".}
proc fcQImage_trueMatrix(param1: pointer, w: cint, h: cint): pointer {.importc: "QImage_trueMatrix".}
proc fcQImage_mirrored(self: pointer, ): pointer {.importc: "QImage_mirrored".}
proc fcQImage_rgbSwapped(self: pointer, ): pointer {.importc: "QImage_rgbSwapped".}
proc fcQImage_mirror(self: pointer, ): void {.importc: "QImage_mirror".}
proc fcQImage_rgbSwap(self: pointer, ): void {.importc: "QImage_rgbSwap".}
proc fcQImage_invertPixels(self: pointer, ): void {.importc: "QImage_invertPixels".}
proc fcQImage_colorSpace(self: pointer, ): pointer {.importc: "QImage_colorSpace".}
proc fcQImage_convertedToColorSpace(self: pointer, param1: pointer): pointer {.importc: "QImage_convertedToColorSpace".}
proc fcQImage_convertToColorSpace(self: pointer, param1: pointer): void {.importc: "QImage_convertToColorSpace".}
proc fcQImage_setColorSpace(self: pointer, colorSpace: pointer): void {.importc: "QImage_setColorSpace".}
proc fcQImage_colorTransformed(self: pointer, transform: pointer): pointer {.importc: "QImage_colorTransformed".}
proc fcQImage_applyColorTransform(self: pointer, transform: pointer): void {.importc: "QImage_applyColorTransform".}
proc fcQImage_load(self: pointer, device: pointer, format: cstring): bool {.importc: "QImage_load".}
proc fcQImage_loadWithFileName(self: pointer, fileName: struct_miqt_string): bool {.importc: "QImage_loadWithFileName".}
proc fcQImage_loadFromData(self: pointer, data: pointer): bool {.importc: "QImage_loadFromData".}
proc fcQImage_loadFromData2(self: pointer, buf: ptr uint8, len: cint): bool {.importc: "QImage_loadFromData2".}
proc fcQImage_loadFromDataWithData(self: pointer, data: struct_miqt_string): bool {.importc: "QImage_loadFromDataWithData".}
proc fcQImage_save(self: pointer, fileName: struct_miqt_string): bool {.importc: "QImage_save".}
proc fcQImage_saveWithDevice(self: pointer, device: pointer): bool {.importc: "QImage_saveWithDevice".}
proc fcQImage_fromData(data: pointer): pointer {.importc: "QImage_fromData".}
proc fcQImage_fromData2(data: ptr uint8, size: cint): pointer {.importc: "QImage_fromData2".}
proc fcQImage_fromDataWithData(data: struct_miqt_string): pointer {.importc: "QImage_fromDataWithData".}
proc fcQImage_cacheKey(self: pointer, ): clonglong {.importc: "QImage_cacheKey".}
proc fcQImage_paintEngine(self: pointer, ): pointer {.importc: "QImage_paintEngine".}
proc fcQImage_dotsPerMeterX(self: pointer, ): cint {.importc: "QImage_dotsPerMeterX".}
proc fcQImage_dotsPerMeterY(self: pointer, ): cint {.importc: "QImage_dotsPerMeterY".}
proc fcQImage_setDotsPerMeterX(self: pointer, dotsPerMeterX: cint): void {.importc: "QImage_setDotsPerMeterX".}
proc fcQImage_setDotsPerMeterY(self: pointer, dotsPerMeterY: cint): void {.importc: "QImage_setDotsPerMeterY".}
proc fcQImage_offset(self: pointer, ): pointer {.importc: "QImage_offset".}
proc fcQImage_setOffset(self: pointer, offset: pointer): void {.importc: "QImage_setOffset".}
proc fcQImage_textKeys(self: pointer, ): struct_miqt_array {.importc: "QImage_textKeys".}
proc fcQImage_text(self: pointer, ): struct_miqt_string {.importc: "QImage_text".}
proc fcQImage_setText(self: pointer, key: struct_miqt_string, value: struct_miqt_string): void {.importc: "QImage_setText".}
proc fcQImage_pixelFormat(self: pointer, ): pointer {.importc: "QImage_pixelFormat".}
proc fcQImage_toPixelFormat(format: cint): pointer {.importc: "QImage_toPixelFormat".}
proc fcQImage_toImageFormat(format: pointer): cint {.importc: "QImage_toImageFormat".}
proc fcQImage_copy1(self: pointer, rect: pointer): pointer {.importc: "QImage_copy1".}
proc fcQImage_convertToFormat22(self: pointer, f: cint, flags: cint): pointer {.importc: "QImage_convertToFormat22".}
proc fcQImage_convertToFormat3(self: pointer, f: cint, colorTable: struct_miqt_array, flags: cint): pointer {.importc: "QImage_convertToFormat3".}
proc fcQImage_convertedTo2(self: pointer, f: cint, flags: cint): pointer {.importc: "QImage_convertedTo2".}
proc fcQImage_convertTo2(self: pointer, f: cint, flags: cint): void {.importc: "QImage_convertTo2".}
proc fcQImage_createAlphaMask1(self: pointer, flags: cint): pointer {.importc: "QImage_createAlphaMask1".}
proc fcQImage_createHeuristicMask1(self: pointer, clipTight: bool): pointer {.importc: "QImage_createHeuristicMask1".}
proc fcQImage_createMaskFromColor2(self: pointer, color: cuint, mode: cint): pointer {.importc: "QImage_createMaskFromColor2".}
proc fcQImage_scaled3(self: pointer, w: cint, h: cint, aspectMode: cint): pointer {.importc: "QImage_scaled3".}
proc fcQImage_scaled4(self: pointer, w: cint, h: cint, aspectMode: cint, mode: cint): pointer {.importc: "QImage_scaled4".}
